src/objects/Scheduled_Job__c.object
<CustomObject>
    <fields>
        <fullName>Class_File__c</fullName>
        <label>Class File</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Run__c</fullName>
        <label>Last Run</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Scheduled Job</label>
    <nameField>
        <label>Scheduled Jobs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Job</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>